--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "pg": "^8.0.2"
+  },
+  "engines": {
+    "node": "10.16.3"
   }
 }
